# katana

./: .gitmodules  Cargo.toml  Dockerfile  README.md
.github/workflows/: claude-code-review.yml
crates/chain-spec/src/: dev.rs
crates/chain-spec/src/rollup/: mod.rs  utils.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  options.rs
crates/core/: Cargo.toml
crates/core/benches/: commit.rs
crates/core/src/: constants.rs
crates/core/src/backend/: mod.rs  storage.rs
crates/core/src/service/: block_producer.rs  block_producer_tests.rs
crates/core/tests/: backend.rs
crates/executor/benches/: utils.rs
crates/executor/tests/fixtures/: mod.rs
crates/feeder-gateway/src/types/: mod.rs
crates/log/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: lib.rs
crates/node/src/config/: dev.rs  rpc.rs
crates/node/src/full/: mod.rs
crates/oracle/gas/: Cargo.toml
crates/oracle/gas/src/: fixed.rs  lib.rs
crates/primitives/src/: block.rs  env.rs  transaction.rs  version.rs
crates/primitives/src/genesis/: json.rs  mod.rs
crates/rpc/rpc/: Cargo.toml
crates/rpc/rpc-api/src/: starknet.rs
crates/rpc/rpc-types/src/: block.rs  trace.rs
crates/rpc/rpc/src/: lib.rs
crates/rpc/rpc/tests/: forking.rs
crates/sync/stage/: Cargo.toml
crates/trie/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/examples/: mock_provider.rs
crates/utils/macro/: Cargo.toml  README.md
crates/utils/macro/src/: lib.rs  mock_provider.rs
crates/utils/macro/tests/: custom_param_names.rs  mock_provider.rs
crates/utils/src/: lib.rs
(+19 files in other folders)
